core_directory/tests/fixtures/invalid_no_sig/incomplet_provider_details.core
CAPI=2:
name: vendor:library:core:1.0.0
description: "A core file with incomplite provider details."
provider:
  name: github